--- a/static-files-folder/style.css
+++ b/static-files-folder/style.css
@@ -19,8 +19,10 @@ button{
     font-size: x-large;
     border-radius: 10px;
     border-color: #58727f;
-    width: 12vw;
     
+}
+.buttonFixedWidth{
+    width: 12vw;
 }
 button:hover{
     color: blue;
@@ -359,4 +361,12 @@ a{
     border: 2px solid black;
     background-color: white;
     margin: 10px;
+}
+
+.gamePageFactoryButton {
+    font-size: x-large;
+    padding: 12px 12px 12px 12px;
+    border-radius: 10px;
+    border-color: #58727f;
+    margin-bottom: 8px;
 }
