--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,18 +5,18 @@
         <div id = "topOfPage">
         <h1>{% if page_title %} {{page_title}}{% endif %}</h1>
         <nav>
-            <a href="index.html"><button>Home</button></a>
+            <a href="index.html"><button class="buttonFixedWidth">Home</button></a>
             <!--<a href="create.html"><button>Create Account</button></a>-->
             {% if user %}
-            <a href="logout.html"><button>Log Out</button></a>
+            <a href="logout.html"><button class="buttonFixedWidth">Log Out</button></a>
             {% else %}
-            <a href="create.html"><button>Create Account</button></a>
-            <a href="login.html"><button>Login</button></a>
+            <a href="create.html"><button class="buttonFixedWidth">Create Account</button></a>
+            <a href="login.html"><button class="buttonFixedWidth">Login</button></a>
             {% endif %}
-            <a href="game.html"><button>Play Game</button></a>
-            <a href="marketplace.html"><button>Marketplace</button></a>
-            <a href="upload.html"><button>Image Upload</button></a>
-            <a href="leaderboard.html"><button>Leaderboard</button></a>
+            <a href="game.html"><button class="buttonFixedWidth">Play Game</button></a>
+            <a href="marketplace.html"><button class="buttonFixedWidth">Marketplace</button></a>
+            <a href="upload.html"><button class="buttonFixedWidth">Image Upload</button></a>
+            <a href="leaderboard.html"><button class="buttonFixedWidth">Leaderboard</button></a>
         </nav>
         </div>
     </head>
