--- a/templates/visit.html
+++ b/templates/visit.html
@@ -41,10 +41,12 @@
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
+    <!--
     <h2 id="total">{% if visiting['collectibles'] is defined %}{{visiting['collectibles']}}{% else %}0{% endif %}</h2>
     <div class='centered'>
-        <h3>Collectibles</h3>
+        <h3>{% if visiting['collectible_label_p'] is defined %}{{visiting['collectible_label_p']}}{% else %}Collectibles{% endif %}</h3>
     </div>
+    -->
 
     {% else %}
     <p>Welcome to the Visit portal!</p>
@@ -64,7 +66,13 @@
 
         {% if visiting %}
 
-        setInterval(function() { document.getElementById('total').textContent = parseInt(document.getElementById('total').textContent) + {{visiting['cps']}}; }, 1000)
+        let count = {{visiting['collectibles']}} + (Math.floor((Date.now() - {{visiting['left_game']}}) / 1000) * {{visiting['cps']}});
+        
+        //updateUIOnLoad("{{visiting['uname']}}");
+
+        //document.addEventListener('onload', function(){ document.getElementById("total").textContent = count.toLocaleString();});
+
+        setInterval(function() { count = count + {{visiting['cps']}}; document.getElementById("total").textContent = count.toLocaleString(); }, 1000);
 
         {% endif %}
         
