--- a/static-files-folder/style.css
+++ b/static-files-folder/style.css
@@ -68,14 +68,49 @@ button:hover{
 
 #user-imgs{
     display:flex; 
-    justify-content: center;
+    justify-content: left;
     gap: 20px;
     flex-direction: row;
-    overflow: auto;
+    overflow-x: scroll;
     white-space: nowrap;
-    top: -40px;
-    left:20px;
-    right: -20px;
+    width: 98%;
+    background-color: #213458;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#template-muffins{
+    display:flex; 
+    justify-content: left;
+    gap: 20px;
+    flex-direction: row;
+    overflow-x: scroll;
+    white-space: nowrap;
+    width: 98%;
+    background-color: #213458;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#user-image{
+    position:absolute;
+    border-radius: 60px;
+    z-index: 0;
+}
+
+#click-button{
+    z-index: 1;
+}
+
+#imageNav{
+    overflow-y: hidden;
+    height: 270px;
+}
+
+#templateNav{
+    height: 280px;
 }
 
 
@@ -306,10 +341,17 @@ a{
     color: blue;
 }
 
+.buttons{
+    display:flex;
+    justify-content: center;
+    flex-flow: row wrap;
+    gap: 2%;
+}
+
 #gameArea{
     border: 3px solid #000000;
     width: 900px;
-    height: 400px;
+    height: 260px;
     padding: 100px 0px;
     background-color: #afd6dd;
     text-align: center;
@@ -327,7 +369,7 @@ a{
     height: 30%;
     width: 0;
     position: absolute;
-    z-index: 1;
+    z-index: 5;
     top: 50;
     left: 0;
     background-color: rgb(94, 122, 115);
